# tauri-test

./: .gitignore  .prettierignore  README.md  TODO.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  ci.yml
apps/desktop-tray/contracts/: client-list-sync.schema.json  notification-message.schema.json  telemetry.schema.json  vault-handoff.schema.json
apps/desktop-tray/sidecar/: README.md
apps/desktop-tray/src-tauri/: Cargo.toml  mutants.toml  tauri.conf.json
apps/desktop-tray/src-tauri/src/: lib.rs  main.rs
apps/desktop-tray/src-tauri/src/audit/: mod.rs  redactor.rs
apps/desktop-tray/src-tauri/src/credentials/: base.rs  keyring.rs  mod.rs
apps/desktop-tray/src-tauri/src/lifecycle/: mod.rs
apps/desktop-tray/src-tauri/src/notify/: mod.rs
apps/desktop-tray/src-tauri/src/platform/: mod.rs
apps/desktop-tray/src-tauri/src/pull/: mod.rs
apps/desktop-tray/src-tauri/src/runner/: base.rs  mod.rs
apps/desktop-tray/src-tauri/src/schedule/: mod.rs
apps/desktop-tray/src-tauri/src/schemas/: client_list.rs  mod.rs  notification.rs  telemetry.rs  vault_handoff.rs
apps/desktop-tray/src-tauri/src/scriptlib/: base.rs  mod.rs
apps/desktop-tray/src-tauri/src/store/: migrations.rs  mod.rs
apps/desktop-tray/src-tauri/src/telemetry/: mod.rs
apps/desktop-tray/src-tauri/src/testkit/: mod.rs
apps/desktop-tray/src-tauri/src/update/: base.rs  mod.rs  tauri_updater.rs
apps/desktop-tray/src-tauri/tests/bdd/: main.rs  steps.rs
apps/desktop-tray/src-tauri/tests/bdd/features/: credentials.feature
apps/desktop-tray/src-tauri/tests/integration/: main.rs  store_smoke.rs
apps/desktop-tray/src-tauri/tests/property/: main.rs  redaction.rs
apps/desktop-tray/src-tauri/tests/proptest-regressions/: redaction.txt
apps/desktop-tray/src-tauri/tests/unit/: README.md
apps/desktop-tray/ui/: package.json  playwright.config.ts  tailwind.config.js
apps/desktop-tray/ui/src/: App.vue
apps/desktop-tray/ui/src/app/router/: index.ts
apps/desktop-tray/ui/tests/e2e/: smoke.spec.ts
docs/: dependencies.md  testing.md
src/: style.css
src-tauri/: tauri.conf.json
src/app/router/: index.ts
src/domains/auth/presentation/views/: LoginView.vue
src/domains/dashboard/presentation/views/: DashboardView.vue
src/shared/components/core/: AppAccordion.vue  AppAvatar.vue  AppButton.vue  AppCheckbox.vue  AppDialog.vue  AppInput.vue  AppOfflineQueue.vue  AppProgressBar.vue  AppSearchBar.vue  AppSelect.vue  AppSidebar.vue  AppStatusPill.vue  AppTextarea.vue  AppToggle.vue  AppTooltip.vue  config.ts  types.ts
src/shared/infrastructure/tauri/: notificationService.ts
src/shared/layouts/: MainLayout.vue
src/shared/localization/: locales.ts
src/shared/localization/locales/: en.json  fr.json
src/shared/stores/: themeStore.ts
src/shared/theme/: index.ts
tools/mock-ws-server/: package.json  server.mjs
(+58 files in other folders)
